// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFixturesTicker rugby should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker rugby should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with fixturesPageUrl 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with fixturesPageUrl 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jWLyDH"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jIIHoi"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb kSTJgb"
  >
    <div
      class="sc-htpNat sc-EHOje jIIHoi"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
